# glassflow-python-sdk

./: .gitignore  LICENSE.md  README.md  USAGE.md  build-docs.sh  coverage.xml  generate_docs.py  makefile  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  request-new-library  request-new-source-or-destination-feature.md
.github/workflows/: copilot-setup-steps.yml  docs.yml  on_pr.yaml  publish_pypi.yaml  release.yml  smoke.yml  test.yml  version-bump.yml
docs/: index.md  pipeline_management.md  publish_and_consume.md  reference.md
src/cli/: cli.py
src/cli/commands/: __init__.py  get_started.py
src/glassflow/: __init__.py  api_client.py  cli.py  client.py  config.py  pipeline.py  pipeline_data.py  pipelines.py  secret.py  space.py
src/glassflow/etl/: __init__.py  api_client.py  client.py  dlq.py  errors.py  pipeline.py  tracking.py  utils.py
src/glassflow/etl/models/: __init__.py  base.py  config.py  data_types.py  filter.py  join.py  metadata.py  pipeline.py  resources.py  schema.py  sink.py  source.py  stateless_transformation.py
src/glassflow/etl/models/sources/: __init__.py  kafka.py  otlp.py
src/glassflow/etl/models/transforms/: __init__.py  deduplication.py  filter.py  join.py  stateless.py  stateless_transformation.py
src/glassflow/models/api/: __init__.py  api.py
src/glassflow/models/api/v2/: __init__.py  api.py
src/glassflow/models/components/: __init__.py  pipeline.py
src/glassflow/models/errors/: __init__.py  clienterror.py  error.py  pipeline.py  secret.py  space.py
src/glassflow/models/operations/: __init__.py  access_token.py  artifact.py  base.py  consumeevent.py  consumefailed.py  function.py  getpipeline.py  pipeline.py  pipeline_access_token_curd.py  pipeline_crud.py  pipeline_function.py  publishevent.py  space.py  space_crud.py  status_access_token.py
src/glassflow/models/operations/v2/: __init__.py  base.py  consumeevent.py  function.py  pipeline.py  publishevent.py  space.py
src/glassflow/models/responses/: __init__.py  pipeline.py  secret.py  space.py
src/glassflow/utils/: __init__.py  retries.py  utils.py  yaml_models.py  yaml_operations.py
tests/: conftest.py  test_client.py  test_dlq.py  test_models.py  test_pipeline.py  test_tracking.py  test_utils.py
tests/data/: __init__.py  error_scenarios.py  mock_responses.py  pipeline_configs.py  transformation.py  transformation_2.py  valid_pipeline.json  valid_pipeline.yaml
tests/glassflow/: conftest.py
tests/glassflow/integration_tests/: client_test.py  conftest.py  pipeline_data_test.py  pipeline_test.py  pipelines_test.py  secret_test.py  space_test.py
tests/glassflow/sample_files/: invalid_pipeline_credentials.json
tests/glassflow/unit_tests/: client_test.py  conftest.py  pipeline_data_test.py  pipeline_test.py  pipelines_test.py  secret_test.py  space_test.py
tests/test_models/: test_config_update.py  test_data_types.py  test_deduplication.py  test_join.py  test_pipeline_config.py  test_resources.py  test_schema.py  test_sink.py  test_source_models.py  test_topic.py
